fixed spacing on session&break lengths buttons

--- a/Main_Folder/MY_PROJECTS/timer/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/timer/src/App.scss
@@ -1,7 +1,24 @@
 .App {
   text-align: center;
-  background-color: #6fb1d8;
+  background-color: #6416a0;
+  height:100vh;
+  //border:solid red;
+  padding-top: 20px;
+  margin-top:0;
+  min-height: 100vh;
+  max-height: 100vh;
   //background-image: linear-gradient(blue, white);
+  .labels{
+    margin-bottom: 15px;
+  }
+  .settings-buttons{
+    margin-bottom: 10px;
+  }
+  /*#start-pause-refresh-buttons{
+    width:40px;
+    display: flex;
+    justify-content: space-evenly;
+  }*/
   #circle{
     margin: auto;
     margin-top: 20px;
